// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxao3c3 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  font-weight: 500;
  line-height: 1.4;
  min-height: var(--sx-sizes-6);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  padding-top: calc(var(--sx-space-2) + var(--sx-space-1));
  padding-bottom: calc(var(--sx-space-2) + var(--sx-space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxao3c3:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxao3c3[disabled] {
  opacity: 0.7;
  background-color: var(--sx-colors-tonal300);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="description"
        />
      </div>
      <textarea
        class="sxao3c3"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxao3c3 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  font-weight: 500;
  line-height: 1.4;
  min-height: var(--sx-sizes-6);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  padding-top: calc(var(--sx-space-2) + var(--sx-space-1));
  padding-bottom: calc(var(--sx-space-2) + var(--sx-space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxao3c3:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxao3c3[disabled] {
  opacity: 0.7;
  background-color: var(--sx-colors-tonal300);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="description"
        />
      </div>
      <textarea
        class="sxao3c3"
        error="Error Message"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;
